--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,11 @@
 
+Logs
+- Filter Logs for better display
+- Create Utils Logs(Service)
+
 Test case, functional tests
 
-** categories
+** categories test
 /category/check/:recipeId
 - user checkbox, make sure always create an attribute or find one and update the flag
 
